overflow issues

--- a/frontend-next/src/pages/global.css
+++ b/frontend-next/src/pages/global.css
@@ -5,10 +5,35 @@ body {
   background-color: #272727;
   /* width: 100vw; */
   height: 100vh;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 #__next {
   width: 100%;
   height: 100%;
+}
+
+/* width */
+body::-webkit-scrollbar {
+  width: 10px;
+  display: none;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #313131; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
